--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
     <section class="services" id="services">
         <div class="service">
-            <img src="/src/images/bolinha1.png" alt="bolinha1">
+            <img src="./src/images/bolinha1.png" alt="bolinha1">
             <div class="service-info">
                 <h3>SEO</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sapiente dignissimos ea autem modi
