--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="service">
-            <img src="/src/images/bolinha2.png" alt="bolinha2">
+            <img src="./src/images/bolinha2.png" alt="bolinha2">
             <div class="service-info">
                 <h3>Landing Pages</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sapiente dignissimos ea autem modi
@@ -93,22 +93,22 @@
     <section class="projects" id="projects">
         <div class="project">
             <a href="">
-                <img src="/src/images/tomatoes.jpg" alt="tomatoes">
+                <img src="./src/images/tomatoes.jpg" alt="tomatoes">
             </a>
         </div>
         <div class="project">
             <a href="">
-                <img src="/src/images/landscape.jpg" alt="landscape">
+                <img src="./src/images/landscape.jpg" alt="landscape">
             </a>
         </div>
         <div class="project">
             <a href="">
-                <img src="/src/images/plants.jpg" alt="plants">
+                <img src="./src/images/plants.jpg" alt="plants">
             </a>
         </div>
         <div class="project">
             <a href="">
-                <img src="/src/images/flowers.jpg" alt="flowers">
+                <img src="./src/images/flowers.jpg" alt="flowers">
             </a>
         </div>
     </section>
